src/main/java/lang/partic/compiler/antlr/ParticParser.java
package lang.partic.compiler.antlr;// Generated from Partic.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class ParticParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, T__89=90, T__90=91, T__91=92, T__92=93, T__93=94, 
		T__94=95, T__95=96, T__96=97, T__97=98, T__98=99, T__99=100, T__100=101, 
		T__101=102, T__102=103, T__103=104, T__104=105, IntegerLiteral=106, FloatingPointLiteral=107, 
		BooleanLiteral=108, CharacterLiteral=109, StringLiteral=110, TextBlockLiteral=111, 
		NullLiteral=112, IDENTIFIER=113, WS=114, COMMENT=115, LINE_COMMENT=116;
	public static final int
		RULE_program = 0, RULE_importDeclaration = 1, RULE_typeDeclaration = 2, 
		RULE_classDeclaration = 3, RULE_interfaceDeclaration = 4, RULE_enumDeclaration = 5, 
		RULE_enumBody = 6, RULE_enumConstant = 7, RULE_enumBodyDeclaration = 8, 
		RULE_functionDeclaration = 9, RULE_modifiers = 10, RULE_modifier = 11, 
		RULE_typeParameters = 12, RULE_typeParameter = 13, RULE_typeBound = 14, 
		RULE_classBody = 15, RULE_classBodyDeclaration = 16, RULE_interfaceBody = 17, 
		RULE_interfaceMemberDeclaration = 18, RULE_fieldDeclaration = 19, RULE_variableDeclarator = 20, 
		RULE_constantDeclaration = 21, RULE_methodDeclaration = 22, RULE_abstractMethodDeclaration = 23, 
		RULE_defaultMethodDeclaration = 24, RULE_staticMethodDeclaration = 25, 
		RULE_constructorDeclaration = 26, RULE_constructorBody = 27, RULE_explicitConstructorInvocation = 28, 
		RULE_staticBlock = 29, RULE_annotation = 30, RULE_elementValuePairs = 31, 
		RULE_elementValuePair = 32, RULE_elementValue = 33, RULE_elementValueArrayInitializer = 34, 
		RULE_parameterList = 35, RULE_parameter = 36, RULE_type = 37, RULE_typeList = 38, 
		RULE_primitiveType = 39, RULE_classType = 40, RULE_typeArguments = 41, 
		RULE_typeArgument = 42, RULE_qualifiedName = 43, RULE_block = 44, RULE_statement = 45, 
		RULE_variableDeclarationStatement = 46, RULE_expressionStatement = 47, 
		RULE_ifStatement = 48, RULE_switchStatement = 49, RULE_switchCase = 50, 
		RULE_defaultCase = 51, RULE_whileStatement = 52, RULE_doWhileStatement = 53, 
		RULE_forStatement = 54, RULE_forInit = 55, RULE_forUpdate = 56, RULE_forEachStatement = 57, 
		RULE_returnStatement = 58, RULE_breakStatement = 59, RULE_continueStatement = 60, 
		RULE_throwStatement = 61, RULE_tryStatement = 62, RULE_catchClause = 63, 
		RULE_finallyBlock = 64, RULE_synchronizedStatement = 65, RULE_assertStatement = 66, 
		RULE_expressionList = 67, RULE_expression = 68, RULE_assignmentExpression = 69, 
		RULE_assignmentOperator = 70, RULE_conditionalExpression = 71, RULE_conditionalOrExpression = 72, 
		RULE_conditionalAndExpression = 73, RULE_inclusiveOrExpression = 74, RULE_exclusiveOrExpression = 75, 
		RULE_andExpression = 76, RULE_equalityExpression = 77, RULE_relationalExpression = 78, 
		RULE_shiftExpression = 79, RULE_additiveExpression = 80, RULE_multiplicativeExpression = 81, 
		RULE_unaryExpression = 82, RULE_castExpression = 83, RULE_postfixExpression = 84, 
		RULE_argumentList = 85, RULE_primary = 86, RULE_creator = 87, RULE_lambdaExpression = 88, 
		RULE_lambdaParameters = 89, RULE_lambdaBody = 90, RULE_methodReference = 91, 
		RULE_arrayInitializer = 92, RULE_literal = 93;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "importDeclaration", "typeDeclaration", "classDeclaration", 
			"interfaceDeclaration", "enumDeclaration", "enumBody", "enumConstant", 
			"enumBodyDeclaration", "functionDeclaration", "modifiers", "modifier", 
			"typeParameters", "typeParameter", "typeBound", "classBody", "classBodyDeclaration", 
			"interfaceBody", "interfaceMemberDeclaration", "fieldDeclaration", "variableDeclarator", 
			"constantDeclaration", "methodDeclaration", "abstractMethodDeclaration", 
			"defaultMethodDeclaration", "staticMethodDeclaration", "constructorDeclaration", 
			"constructorBody", "explicitConstructorInvocation", "staticBlock", "annotation", 
			"elementValuePairs", "elementValuePair", "elementValue", "elementValueArrayInitializer", 
			"parameterList", "parameter", "type", "typeList", "primitiveType", "classType", 
			"typeArguments", "typeArgument", "qualifiedName", "block", "statement", 
			"variableDeclarationStatement", "expressionStatement", "ifStatement", 
			"switchStatement", "switchCase", "defaultCase", "whileStatement", "doWhileStatement", 
			"forStatement", "forInit", "forUpdate", "forEachStatement", "returnStatement", 
			"breakStatement", "continueStatement", "throwStatement", "tryStatement", 
			"catchClause", "finallyBlock", "synchronizedStatement", "assertStatement", 
			"expressionList", "expression", "assignmentExpression", "assignmentOperator", 
			"conditionalExpression", "conditionalOrExpression", "conditionalAndExpression", 
			"inclusiveOrExpression", "exclusiveOrExpression", "andExpression", "equalityExpression", 
			"relationalExpression", "shiftExpression", "additiveExpression", "multiplicativeExpression", 
			"unaryExpression", "castExpression", "postfixExpression", "argumentList", 
			"primary", "creator", "lambdaExpression", "lambdaParameters", "lambdaBody", 
			"methodReference", "arrayInitializer", "literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'import'", "'as'", "';'", "'class'", "'extends'", "'implements'", 
			"'interface'", "'enum'", "'{'", "','", "'}'", "'('", "')'", "'pub'", 
			"'priv'", "'prot'", "'pack'", "'static'", "'final'", "'abstract'", "'sealed'", 
			"'open'", "'override'", "'native'", "'synchronized'", "'transient'", 
			"'volatile'", "'<'", "'>'", "'&'", "'='", "'default'", "'this'", "'super'", 
			"'@'", "'['", "']'", "'int'", "'long'", "'short'", "'byte'", "'float'", 
			"'double'", "'char'", "'bool'", "'str'", "'void'", "'?'", "'.'", "'if'", 
			"'else'", "'switch'", "'case'", "':'", "'while'", "'do'", "'for'", "'return'", 
			"'break'", "'continue'", "'throw'", "'try'", "'catch'", "'finally'", 
			"'assert'", "'+='", "'-='", "'*='", "'/='", "'%='", "'&='", "'|='", "'^='", 
			"'<<='", "'>>='", "'>>>='", "'??='", "'??'", "'||'", "'&&'", "'|'", "'^'", 
			"'=='", "'!='", "'==='", "'!=='", "'<='", "'>='", "'instanceof'", "'in'", 
			"'<<'", "'>>'", "'>>>'", "'+'", "'-'", "'*'", "'/'", "'%'", "'++'", "'--'", 
			"'!'", "'~'", "'new'", "'->'", "'::'", null, null, null, null, null, 
			null, "'null'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "IntegerLiteral", 
			"FloatingPointLiteral", "BooleanLiteral", "CharacterLiteral", "StringLiteral", 
			"TextBlockLiteral", "NullLiteral", "IDENTIFIER", "WS", "COMMENT", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Partic.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ParticParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<ImportDeclarationContext> importDeclaration() {
			return getRuleContexts(ImportDeclarationContext.class);
		}
		public ImportDeclarationContext importDeclaration(int i) {
			return getRuleContext(ImportDeclarationContext.class,i);
		}
		public List<TypeDeclarationContext> typeDeclaration() {
			return getRuleContexts(TypeDeclarationContext.class);
		}
		public TypeDeclarationContext typeDeclaration(int i) {
			return getRuleContext(TypeDeclarationContext.class,i);
		}
		public List<FunctionDeclarationContext> functionDeclaration() {
			return getRuleContexts(FunctionDeclarationContext.class);
		}
		public FunctionDeclarationContext functionDeclaration(int i) {
			return getRuleContext(FunctionDeclarationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParticVisitor) return ((ParticVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(193);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 281234726961554L) != 0) || _la==IDENTIFIER) {
				{
				setState(191);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(188);
					importDeclaration();
					}
					break;
				case 2:
					{
					setState(189);
					typeDeclaration();
					}
					break;
				case 3:
					{
					setState(190);
					functionDeclaration();
					}
					break;
				}
				}
				setState(195);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportDeclarationContext extends ParserRuleContext {
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(ParticParser.IDENTIFIER, 0); }
		public ImportDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDeclaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParticVisitor) return ((ParticVisitor<? extends T>)visitor).visitImportDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportDeclarationContext importDeclaration() throws RecognitionException {
		ImportDeclarationContext _localctx = new ImportDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(196);
			match(T__0);
			setState(197);
			qualifiedName();
			setState(200);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(198);
				match(T__1);
				setState(199);
				match(IDENTIFIER);
				}
			}

			setState(202);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeDeclarationContext extends ParserRuleContext {
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public InterfaceDeclarationContext interfaceDeclaration() {
			return getRuleContext(InterfaceDeclarationContext.class,0);
		}
		public EnumDeclarationContext enumDeclaration() {
			return getRuleContext(EnumDeclarationContext.class,0);
		}
		public TypeDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDeclaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParticVisitor) return ((ParticVisitor<? extends T>)visitor).visitTypeDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeDeclarationContext typeDeclaration() throws RecognitionException {
		TypeDeclarationContext _localctx = new TypeDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_typeDeclaration);
		try {
			setState(207);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(204);
				classDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(205);
				interfaceDeclaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(206);
				enumDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassDeclarationContext extends ParserRuleContext {
		public ModifiersContext modifiers() {
			return getRuleContext(ModifiersContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(ParticParser.IDENTIFIER, 0); }
		public ClassBodyContext classBody() {
			return getRuleContext(ClassBodyContext.class,0);
		}
		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}
		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class,i);
		}
		public TypeParametersContext typeParameters() {
			return getRuleContext(TypeParametersContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TypeListContext typeList() {
			return getRuleContext(TypeListContext.class,0);
		}
		public ClassDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDeclaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParticVisitor) return ((ParticVisitor<? extends T>)visitor).visitClassDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDeclarationContext classDeclaration() throws RecognitionException {
		ClassDeclarationContext _localctx = new ClassDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_classDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(212);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__34) {
				{
				{
				setState(209);
				annotation();
				}
				}
				setState(214);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(215);
			modifiers();
			setState(216);
			match(T__3);
			setState(217);
			match(IDENTIFIER);
			setState(219);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__27) {
				{
				setState(218);
				typeParameters();
				}
			}

			setState(223);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(221);
				match(T__4);
				setState(222);
				type();
				}
			}

			setState(227);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(225);
				match(T__5);
				setState(226);
				typeList();
				}
			}

			setState(229);
			classBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InterfaceDeclarationContext extends ParserRuleContext {
		public ModifiersContext modifiers() {
			return getRuleContext(ModifiersContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(ParticParser.IDENTIFIER, 0); }
		public InterfaceBodyContext interfaceBody() {
			return getRuleContext(InterfaceBodyContext.class,0);
		}
		public TypeParametersContext typeParameters() {
			return getRuleContext(TypeParametersContext.class,0);
		}
		public TypeListContext typeList() {
			return getRuleContext(TypeListContext.class,0);
		}
		public InterfaceDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfaceDeclaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParticVisitor) return ((ParticVisitor<? extends T>)visitor).visitInterfaceDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InterfaceDeclarationContext interfaceDeclaration() throws RecognitionException {
		InterfaceDeclarationContext _localctx = new InterfaceDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_interfaceDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(231);
			modifiers();
			setState(232);
			match(T__6);
			setState(233);
			match(IDENTIFIER);
			setState(235);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__27) {
				{
				setState(234);
				typeParameters();
				}
			}

			setState(239);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(237);
				match(T__4);
				setState(238);
				typeList();
				}
			}

			setState(241);
			interfaceBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
